--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Duncan Blythe
 description: AI researcher and entrepreneur based in Berlin
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars.githubusercontent.com/u/15139331?s=96&v=4
+avatar: https://avatars.githubusercontent.com/u/15139331
 
 #
 # Flags below are optional
