added a few things

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Duncan Blythe
 
 # Short bio or description (displayed in the header)
-description: AI researcher and entrepreneur based in Berlin
+description: AI researcher, entrepreneur and architect
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/15139331
